Wrapping up and adding new notebooks
Finalizing reports and exploratory notebooks.
Still have not refactored everything, just the important ones.

--- a/notebooks/exploratory/5.1-twh-inference-model-data.md
+++ b/notebooks/exploratory/5.1-twh-inference-model-data.md
@@ -144,6 +144,19 @@ mask = (elf_full_data > threshold) & (freq_grid > 3)
 freq_data = freq_grid[mask]
 elf_data = elf_full_data[mask]
 print(f"shape of ELF data = {elf_data.shape}")
+
+# save this data for future reference
+collfreqdata = collisionfreq(freq_grid / AtomicUnits.energy, popt_AAcoll) 
+np.savetxt(
+    "../../data/raw/mermin_ELF_collision_model_fit_to_AA.txt",
+    np.asarray([freq_grid, collfreqdata.real, collfreqdata.imag, elf_full_data]).T,
+    header="# frequency (eV); collision freq. (real) (au); collision freq. (imag) (au); ELF",
+    comments=(
+    "# Mermin ELF data using the BornLogPeak collision frequency most fit to Average-Atom T+ collision frequency\n"
+    + 
+    "# Collision frequency model parameters: {:.4e} {:.4e} {:.4e} {:.4e} {:.4e}\n".format(*popt_AAcoll)
+    )
+)
 ```
 
 # Define residual function for ELF data
@@ -225,7 +238,7 @@ We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_modeldata_bornlogpeak"
-dataset = f"{residualtype} residual - q = {wavenum} - {percentage_of_peak}% peak threshold"
+dataset = f"{residualtype} residual - q = {wavenum} - {int(percentage_of_peak * 100)}% peak threshold"
 ```
 
 ```{code-cell} ipython3
