--- a/notebooks/exploratory/6.0-twh-dc-conductivity.md
+++ b/notebooks/exploratory/6.0-twh-dc-conductivity.md
@@ -53,6 +53,7 @@ import emcee
 import numpy as np
 import matplotlib.pyplot as plt
 import h5py
+from uegdielectric import ElectronGas
 
 from src.inference import collision_models as cmods
 from src.utilities import AtomicUnits
@@ -60,8 +61,8 @@ from src.inference.mcmc_inference import flat_mcmc_samples
 ```
 
 ```{code-cell} ipython3
-samplesfile = "../../data/mcmc/mcmc_modeldata"
-dataset = "mcmc samples - model data - rel. residual - 4 params"
+samplesfile = "../../data/mcmc/mcmc_modeldata_bornlogpeak"
+dataset = "rel residual - q = 1.55 - full freq grid"
 
 backend = emcee.backends.HDFBackend(samplesfile, name=dataset)
 flat_samples = flat_mcmc_samples(backend)
@@ -71,13 +72,17 @@ flat_samples = flat_mcmc_samples(backend)
 # Get electron density from file
 with h5py.File(samplesfile, "a") as f:
     # print(list(f.keys()))
-    density = f[dataset].attrs["input data density [1/angstrom^3]"]
+    d = f[dataset].attrs["input data density [1/angstrom^3]"]
+    t = f[dataset].attrs["input data temperature [eV]"]
+    
+electrons = ElectronGas(t / AtomicUnits.energy, d * AtomicUnits.length**3)
+Z = 3
     # dset = f[dataset]
     # for attr in dset.attrs:
     #     print(f"{attr} : {dset.attrs[attr]}")
     
 # convert density to atomic units
-elecden_au = density * AtomicUnits.length**3
+# elecden_au = density * AtomicUnits.length**3
 ```
 
 ## Average over samples to get mean and variance
@@ -85,6 +90,10 @@ elecden_au = density * AtomicUnits.length**3
 We first plot the collision frequency for a small subset of the sampled parameters to check the mean and variance calculations
 
 ```{code-cell} ipython3
+# define our collision frequency function
+collisionfreq = cmods.BornLogPeak(electrons.temperature, electrons.density, electrons.chemicalpot, Z)
+
+
 rng = np.random.default_rng()
 # randomly pick 100 samples from our MCMC sampling data
 inds = rng.integers(len(flat_samples), size=100)
@@ -95,7 +104,7 @@ for ind in inds:
     sample = flat_samples[ind]
     plt.semilogx(
         freq, 
-        cmods.collision_activate_decay(freq / AtomicUnits.energy, *sample), 
+        collisionfreq.real(freq / AtomicUnits.energy, sample), 
         "C1", 
         alpha=0.1
     )
@@ -103,8 +112,8 @@ for ind in inds:
 mean = np.zeros_like(freq)
 stddev = np.zeros_like(freq)
 for i in range(len(freq)):
-    mean[i] = np.mean(cmods.collision_activate_decay(freq[i]/ AtomicUnits.energy, *flat_samples.T))
-    stddev[i] = np.std(cmods.collision_activate_decay(freq[i]/ AtomicUnits.energy, *flat_samples.T))
+    mean[i] = np.mean(collisionfreq.real(freq[i]/ AtomicUnits.energy, flat_samples.T))
+    stddev[i] = np.std(collisionfreq.real(freq[i]/ AtomicUnits.energy, flat_samples.T))
 plt.plot(freq, mean, c="k", ls = "--", lw=0.5, label="mean")
 plt.plot(freq, mean + stddev, c="k", ls="-", lw=0.5, label="max(0, mean +/-std. dev.)")
 plt.plot(freq, np.maximum(0, mean - stddev), c="k", ls="-", lw=0.5)
@@ -117,11 +126,11 @@ plt.legend()
 
 ```{code-cell} ipython3
 def dcconductivity(density, params):
-    return density / cmods.collision_activate_decay(0, *params)
+    return density / collisionfreq.real(0, params)
 ```
 
 ```{code-cell} ipython3
-dccond_samples = dcconductivity(elecden_au, flat_samples.T)
+dccond_samples = dcconductivity(electrons.density, flat_samples.T)
 mean = np.mean(dccond_samples)
 stddev = np.std(dccond_samples)
 print(f"mean(DC conductivity) = {mean} [au]")
