--- a/notebooks/exploratory/7.1-twh-inference-TDDFT-two-angle.md
+++ b/notebooks/exploratory/7.1-twh-inference-TDDFT-two-angle.md
@@ -57,17 +57,8 @@ t = teV / AtomicUnits.energy
 d_ang = 0.18071 # 1/[angstroms]**3
 d = d_ang * AtomicUnits.length**3
 
-# chemical potential
-cp = 0.3212 # [at u]
-
 # ionization state (at T = 1 eV)
 Z = 3
-
-# # read in data
-# AAdata = np.loadtxt(AAdatafile, skiprows=9, usecols=[0, 9], unpack=True)
-
-# # function for DOS ratio
-# dos_fn = lambda x : np.interp(x, np.sqrt(2 * AAdata[0] / AtomicUnits.energy), AAdata[1])
 
 # electron data
 electrons = ElectronGas(t, d)
@@ -137,6 +128,17 @@ elf_full_data = (
 
 # normalize ELF data along rows (each wave number)
 normed_elf_full_data = elf_full_data / np.expand_dims(np.max(elf_full_data, axis=1), axis=1)
+
+# save ELF data
+header="""ELF data computed from TDDFT DSF data
+Solid density Al @ T=1 eV electron temperature
+frequency [eV]   q = 0.78 [1/A]   q = 0.78 [1/A] (normalized)    q = 1.55 [1/A]    q = 1.55 [1/A] (normalized)"""
+
+np.savetxt(
+    "../../data/processed/tddft_elf.txt",
+    np.vstack((freq_grid, elf_full_data[0], normed_elf_full_data[0], elf_full_data[1], normed_elf_full_data[1])).T,
+    header=header
+)   
 
 # # truncate range to focus only on peak of ELF
 # percentage_of_peak = 0.80
@@ -244,9 +246,9 @@ lik_sigma = 0.1
 prior_lims = [
     [0, 5],
     [0, 5],
-    [0, 1.5],
+    [0, 5],
     [1e-6, 10],
-    [0, 5]
+    [0, 1.5]
 ]
 
 
@@ -268,11 +270,7 @@ We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_tddft"
-dataset = f"{residualtype} residual - q = {wavenum} - {int(percentage_of_peak * 100)}% peak threshold - v2"
-```
-
-```{code-cell} ipython3
-dataset
+dataset = f"{residualtype} residual - q = {wavenum} - {int(percentage_of_peak * 100)}% peak threshold"
 ```
 
 ```{code-cell} ipython3
@@ -294,7 +292,7 @@ runinfo = {
 # sampler properties
 ndim = 5 # number of parameters
 numchains = 10
-numsamples = 2_500
+numsamples = 5_000
 ```
 
 ```{code-cell} ipython3
@@ -309,7 +307,7 @@ sampler = inference_loop(
     samplesfile,
     dataset,
     runinfo,
-    overwrite=True,
+    overwrite=False,
 )
 ```
 
@@ -320,7 +318,7 @@ sampler = inference_loop(
 import h5py
 with h5py.File(samplesfile, "a") as f:
     # newname = 'abs residual - q = [0.78 1.55] - 80% peak threshold'
-    # oldname = 'abs residual - q = [0.78 1.55] - 0.8% peak threshold'
+    # oldname = 'abs residual - q = [0.78 1.55] - 80% peak threshold - v2'
     # f[newname] = f[oldname]
     # del f[oldname]
     print(list(f.keys()))
@@ -414,7 +412,7 @@ for ind in inds:
 
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylabel("collision freq [au]")
-plt.ylim(1e-3)
+# plt.ylim(1e-3)
 # plt.savefig("../../reports/figures/mcmc_modeldata_collisionsamples")
 ```
 
@@ -474,33 +472,6 @@ plt.xlim(0, 45)
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.legend()
-```
-
-```{code-cell} ipython3
-inferred_params = flat_samples[20]
-powerlaw = [1e-3, 0.5, 1, 1.5, 3, 5, 10, 20, 40]
-fig, ax = plt.subplots(2, 1, figsize=(6,8), sharex=True)
-x = np.linspace(0.1, 60, 100)
-for p in powerlaw:
-    params = inferred_params
-    params[-1] = p
-    ax[0].plot(
-        x,
-        collisionfreq(x / AtomicUnits.energy, params).real,
-        label=f"p = {p}"
-    )
-    elf = elfmodel(x / AtomicUnits.energy, params)
-    ax[1].plot(
-        x,
-        elf[1], 
-    )
-ax[0].axvline(inferred_params[2] * AtomicUnits.energy, ls="--", color="black")
-ax[0].text(inferred_params[2] * AtomicUnits.energy - 4, 0.08, r"$\omega_0$")
-ax[1].axvline(inferred_params[2] * AtomicUnits.energy, ls="--", color="black")
-ax[0].set_ylabel("Collision freq. (au)")
-ax[1].set_ylabel("ELF (au)")
-ax[1].set_xlabel("frequency (eV)")
-ax[0].legend()
 ```
 
 ```{code-cell} ipython3
