Using new combined inference results
Adding AA KG conducitivty to plot for combined inference

--- a/notebooks/exploratory/6.0-twh-dc-conductivity.md
+++ b/notebooks/exploratory/6.0-twh-dc-conductivity.md
@@ -140,10 +140,10 @@ print(f"Std. Dev.(DC conductivity) = {stddev} [au]")
 These quantities are in atomic units, so let's convert them to SI units for conductivity. The conversion factor (thanks WolframAlpha!) is: 1 [au] = 45998.4813 [S/cm] (siemens per centimeter)
 
 ```{code-cell} ipython3
-cond_au2SI = 45998.4813 # S/cm
+cond_au2SI = 4599848.13 # S/cm
 
-print(f"mean(DC conductivity) = {mean * cond_au2SI} [S/cm]")
-print(f"Std. Dev.(DC conductivity) = {stddev  * cond_au2SI} [S/cm]")
+print(f"mean(DC conductivity) = {mean * cond_au2SI:e} [S/cm]")
+print(f"Std. Dev.(DC conductivity) = {stddev  * cond_au2SI:e} [S/cm]")
 ```
 
 ```{code-cell} ipython3
