Updating normalizing used in combined angle inference

--- a/notebooks/exploratory/7.1-twh-inference-TDDFT-two-angle.md
+++ b/notebooks/exploratory/7.1-twh-inference-TDDFT-two-angle.md
@@ -77,22 +77,6 @@ wavenum = np.asarray([0.78, 1.55]) # 1/[angstrom]
 collisionfreq = BornLogPeak(electrons.temperature, electrons.density, electrons.chemicalpot, Z)
 ```
 
-# Define the ELF model
-
-using the Mermin dielectric function and the `collisionfreq` function
-
-```{code-cell} ipython3
-def elfmodel(freq, params):
-    elf = elec_loss_fn(
-        dielectric,
-        wavenum * AtomicUnits.length,
-        freq,
-        lambda x: collisionfreq(x, params)
-    )
-    # normalize each row
-    return elf / np.expand_dims(np.max(elf, axis=1), axis=1)
-```
-
 # Get the TD-DFT DSF data for the correct wave numbers and convert it to the ELF
 
 ```{code-cell} ipython3
@@ -134,11 +118,11 @@ header="""ELF data computed from TDDFT DSF data
 Solid density Al @ T=1 eV electron temperature
 frequency [eV]   q = 0.78 [1/A]   q = 0.78 [1/A] (normalized)    q = 1.55 [1/A]    q = 1.55 [1/A] (normalized)"""
 
-np.savetxt(
-    "../../data/processed/tddft_elf.txt",
-    np.vstack((freq_grid, elf_full_data[0], normed_elf_full_data[0], elf_full_data[1], normed_elf_full_data[1])).T,
-    header=header
-)   
+# np.savetxt(
+#     "../../data/processed/tddft_elf.txt",
+#     np.vstack((freq_grid, elf_full_data[0], normed_elf_full_data[0], elf_full_data[1], normed_elf_full_data[1])).T,
+#     header=header
+# )   
 
 # # truncate range to focus only on peak of ELF
 # percentage_of_peak = 0.80
@@ -163,7 +147,7 @@ trunc_mask = np.reshape(peak_masks[mask_total_range], (2,-1))
 # elf data considered in fitting/inference
 elf_data = np.reshape(normed_elf_full_data[mask_total_range], (2, -1)) * trunc_mask
 
-plt.plot(freq_grid, normed_elf_full_data.T, lw=1, c="black", label=["TD-DFT (loggrid)", ""])
+plt.plot(freq_grid, normed_elf_full_data.T, lw=1, c="black", label=["TD-DFT", ""])
 plt.plot(freq_data, elf_data.T, lw=2)
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
@@ -172,6 +156,26 @@ plt.xlim(0, 45)
 plt.axhline(1-percentage_of_peak, ls="--", c="gray")
 
 print(f"length of data = {elf_data.shape}")
+```
+
+```{code-cell} ipython3
+np.expand_dims(np.max(elf_full_data, axis=1), axis=1)
+```
+
+# Define the ELF model
+
+using the Mermin dielectric function and the `collisionfreq` function
+
+```{code-cell} ipython3
+def elfmodel(freq, params):
+    elf = elec_loss_fn(
+        dielectric,
+        wavenum * AtomicUnits.length,
+        freq,
+        lambda x: collisionfreq(x, params)
+    )
+    # normalize each row
+    return elf / np.expand_dims(np.max(elf_full_data, axis=1), axis=1)# np.expand_dims(np.max(elf, axis=1), axis=1)
 ```
 
 # Define residual function for ELF data
@@ -270,13 +274,13 @@ We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_tddft"
-dataset = f"{residualtype} residual - q = {wavenum} - {int(percentage_of_peak * 100)}% peak threshold"
+dataset = f"{residualtype} residual - q = {wavenum} - {int(percentage_of_peak * 100)}% peak threshold - TDDFT peak normalized"
 ```
 
 ```{code-cell} ipython3
 runinfo = {
     "date" : datetime.today().strftime('%a %d %b %Y, %I:%M%p'),
-    "input data info" : f"""Linear-interpolated TD-DFT data.""",
+    "input data info" : f"""Linear-interpolated, normalized TD-DFT data.""",
     "input data temperature [eV]" : teV,
     "input data density [1/angstrom^3]" : d_ang,
     "input data wavenumber [1/angstrom]" : wavenum,
@@ -285,14 +289,14 @@ runinfo = {
     "frequency grid masks (for each wavenumber)" : peak_masks,
     "collision freq model" : "BornLogPeak, 5 parameters (inverse grad parameter)",
     # "likelihood function" : f"Soft (expenonential) cutoff with a cutoff value of {lik_cutoff}",
-    "likelihood function" : f"Squared Exponential with a std. deviaton value of {lik_sigma}",
+    "likelihood function" : f"Squared Exponential with a std. deviaton value of {lik_sigma}, normalized to TD-DFT data peak",
     "residual" : residualtype,
     "prior distribution function" : f"Uniform distribution with boundaries ({prior_lims})"
 }
 # sampler properties
 ndim = 5 # number of parameters
 numchains = 10
-numsamples = 5_000
+numsamples = 15_000
 ```
 
 ```{code-cell} ipython3
@@ -317,8 +321,8 @@ sampler = inference_loop(
 # view attributes of dataset
 import h5py
 with h5py.File(samplesfile, "a") as f:
-    # newname = 'abs residual - q = [0.78 1.55] - 80% peak threshold'
-    # oldname = 'abs residual - q = [0.78 1.55] - 80% peak threshold - v2'
+    # newname = 'abs residual - q = [0.78 1.55] - 80% peak threshold - TDDFT peak normalized'
+    # oldname = 'abs residual - q = [0.78 1.55] - 80% peak threshold - contant normalized'
     # f[newname] = f[oldname]
     # del f[oldname]
     print(list(f.keys()))
@@ -403,7 +407,7 @@ for ind in inds:
         "grey",
         alpha=0.1
     )
-    plt.loglog(
+    plt.semilogx(
         freq_data, 
         collisionfreq(freq_data / AtomicUnits.energy, sample).real, 
         "C1", 
@@ -412,7 +416,7 @@ for ind in inds:
 
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylabel("collision freq [au]")
-# plt.ylim(1e-3)
+plt.ylim(0, 0.5)
 # plt.savefig("../../reports/figures/mcmc_modeldata_collisionsamples")
 ```
 
